lab-LinuxFoundation-resiliency/fakeservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fakeservice
  labels:
    app: fakeservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fakeservice
  template:
    metadata:
      labels:
        app: fakeservice
    spec:
      containers:
        - name: service
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: fakeservice
spec:
  selector:
    app: fakeservice
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9090
